# AgenticCP-Agent

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.dev.example  env.example  env.prod.example  pyproject.toml  requirements-dev.txt  requirements.txt  test_agents.py  test_settings.py
alembic/: env.py
alembic/versions/: .gitkeep  33d7b9c48623_initial_migration.py
docs/: API.md  API_FRONTEND.md  DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  PYTHON_FASTAPI_STANDARDS.md  README.md
src/: __init__.py  main.py
src/agents/: agent_factory.py  bedrock_llm.py  ec2_agent.py  s3_agent.py  supervisor_agent.py  vpc_agent.py
src/api/: __init__.py
src/api/v1/: __init__.py  agents.py  health.py  multi_agent.py  tasks.py
src/cli/: __init__.py  multi_agent_cli.py
src/config/: __init__.py  database.py  redis.py  settings.py
src/models/: __init__.py  agent.py  base.py  task.py
src/schemas/: __init__.py  agent.py  common.py  task.py
src/services/: __init__.py  agent_service.py  base_service.py  health_service.py  task_service.py
